--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -32,12 +32,14 @@ jobs:
           distribution: 'temurin'
       - name: Run PMD
         id: pmd
-        uses: pmd/pmd-github-action@967a81f8b657c87f7c3e96b62301cb1a48efef29
+        uses: pmd/pmd-github-action@v2
         with:
           version: '7.16.0'
           rulesets: 'rulesets/java/quickstart.xml'
           sourcePath: 'src/main/java'
           analyzeModifiedFilesOnly: false
+          createGitHubAnnotations: true
+          token: ${{ github.token }}
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
         with:
